# JS_Repository

./: .gitignore  Bond_Auto.xlsx  CLAUDE.md  Cargo.toml  README.md  mid.json  playground-1.mongodb.js  refresh_summary.py  update_bond.bat
backtester/: .gitignore  pyproject.toml
backtester/configs/: bbkc_btc_eth_avax_1h_demo.yaml  bbkc_btcusdt_1h_demo.yaml  beda_btcusdt_15m_sqlite.yaml  beda_btcusdt_1m_sqlite.yaml  beda_btcusdt_5m_sqlite.yaml  frama_btc_eth_avax_1h_demo.yaml  frama_btc_eth_avax_4h_demo.yaml  frama_btcusdt_1h_demo.yaml  frama_btcusdt_4h_demo.yaml
backtester/docs/: backtester_spec_v8.md  sats_backtester_implementation_plan.md
backtester/scripts/: check_presets.py  fetch_top30_30m.py  render_beda_modes_report.py  run_beda_grid.py  run_beda_modes_grid.py  sats_grid_1h_nogate_top27.py  sats_grid_1y.py  sats_grid_be_532.py  sats_grid_btc_eth_5tf.py  sats_grid_score_filter.py  sats_grid_top30.py
backtester/tests/: _futures_strategy_harness.py  _strategy_harness.py  test_bar_path_model.py  test_bbkc_bybit_trading_demo_defaults.py  test_bbkc_regression.py  test_bbkc_strategy.py  test_beda_bollinger_pullback.py  test_bybit_source.py  test_cli.py  test_clock.py  test_config_factory.py  test_config_validation.py  test_config_yaml.py  test_context.py  test_csv_source.py  test_data.py  test_engine_integration.py  test_equity.py  test_event_log.py  test_event_parquet.py  test_event_reader.py  test_event_serialize.py  test_execution.py  test_frama_ema200_channel.py  test_frama_pullback_channel.py  test_funding.py  test_gap_policy_and_indicators_view.py  test_kc.py  (+60 more)
(+543 files in other folders)
