[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtester"
version = "0.0.0"
description = "범용 백테스트 프레임워크 (v8 명세 기반)"
readme = "docs/backtester_spec_v8.md"
requires-python = ">=3.10"
authors = [{ name = "kjs0807" }]
dependencies = [
  "polars>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=1.0",
  "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backtester"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
